--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Heather Schmidtlein WDD 230 Assignment Portal</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Assignment portal for Heather Schmidtlein in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
 <body>
