--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Heather Schmidtlein</h1>
   </header>
 
- <img src="images/hll-min.jpg" alt="Photo of Heather Schmidtlein">
+ <img src="heatherrosea.github.io/images/hll-min.jpg" alt="Photo of Heather Schmidtlein">
 <div id="content">
   <h2>WDD 230: Assignment Portal</h2>
   <hr>
@@ -27,6 +27,6 @@
 </div>
  <footer> &copy; 2020 | Heather R. R. Schmidtlein | South Dakota | <a href="https://www.byui.edu/">BYU-I Online Learning</a> 
   <br> Last Update: <span id="date"></span></footer> 
- <script type="text/javascript" src="script/lastupdated.js"></script>
+ <script type="text/javascript" src="heatherrosea.github.io/script/lastupdated.js"></script>
 </body>
 </html>  
