--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Heather Schmidtlein WDD 230 Assignment Portal</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Assignment portal for Heather Schmidtlein in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
-  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/css/styles.css">
+  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/styles.css">
 </head>
 
 <body>
@@ -13,7 +13,7 @@
     <h1>Heather Schmidtlein</h1>
   </header>
 
- <img src="heatherrosea.github.io/images/hll-min.jpg" alt="Photo of Heather Schmidtlein">
+ <img src="heatherrosea.github.io/hll-min.jpg" alt="Photo of Heather Schmidtlein">
 <div id="content">
   <h2>WDD 230: Assignment Portal</h2>
   <hr>
@@ -27,6 +27,6 @@
 </div>
  <footer> &copy; 2020 | Heather R. R. Schmidtlein | South Dakota | <a href="https://www.byui.edu/">BYU-I Online Learning</a> 
   <br> Last Update: <span id="date"></span></footer> 
- <script type="text/javascript" src="heatherrosea.github.io/script/lastupdated.js"></script>
+ <script type="text/javascript" src="heatherrosea.github.io/lastupdated.js"></script>
 </body>
 </html>  
