--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Assignment portal for Heather Schmidtlein in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
   <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/styles.css">
+  <link rel="stylesheet" href="heatherrosea.github.io/normalize.css">
 </head>
 
 <body>
