--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Heather Schmidtlein WDD 230 Assignment Portal</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Assignment portal for Heather Schmidtlein in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="heatherrosea.github.io/normalize.css">
   <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/styles.css">
 </head>
