--- a/index.html
+++ b/index.html
@@ -8,29 +8,29 @@
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="heatherrosea.github.io/normalize.css">
-  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/medium.css">
-  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/styles.css">
+  <link rel="stylesheet" type="text/css" href="medium.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-
-<body>
+  
+  <body>
   <header>
     <h1>Heather Schmidtlein</h1>
   </header>
 
- <img src="heatherrosea.github.io/hll-min.jpg" alt="Photo of Heather Schmidtlein">
+ <img src="https://cdn.glitch.com/b753ac26-8568-4b97-806e-2968b8866a27%2Fhll-min.jpg?v=1601142663699" alt="Photo of Heather Schmidtlein">
 <div id="content">
   <h2>WDD 230: Assignment Portal</h2>
   <hr>
   <nav id="links">
     <ul>
-      <li>Lesson 02: <a href ="lesson02.html">Assignment Link</a></li>
+      <li>Lesson 02: <a href ="lesson02.html">Design Principles</a></li>
       <li>Lesson 03: <a href="lesson03.html">Assignment Link</a></li>
       <li>Lesson 04: <a href="lesson04.html">Link</a> | <a href="lesson04.html">Link</a></li>
     </ul>
   </nav>
 </div>
- <footer> &copy; 2020 | Heather R. R. Schmidtlein | South Dakota | <a href="https://www.byui.edu/">BYU-I Online Learning</a> 
+ <footer> &copy;<span id="year"></span> | Heather R. R. Schmidtlein | South Dakota | <a href="https://www.byui.edu/">BYU-I Online Learning</a> 
   <br> Last Update: <span id="date"></span></footer> 
- <script type="text/javascript" src="heatherrosea.github.io/lastupdated.js"></script>
+ <script type="text/javascript" src="script.js"></script>
 </body>
 </html>  
