--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="heatherrosea.github.io/normalize.css">
   <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/medium.css">
-  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/style.css">
+  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/styles.css">
 </head>
   
   <body>
