--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <nav id="links">
     <ul>
       <li>Lesson 02: <a href ="/heatherrosea.github.io/lesson02.html">Design Principles</a></li>
-      <li>Lesson 03: <a href="/heatherrosea.github.io/lesson03.html">Assignment Link</a></li>
+      <li>Lesson 03: <a href="/heatherrosea.github.io/forecasted-index.html">Assignment Link</a></li>
       <li>Lesson 04: <a href="/heatherrosea.github.io/lesson04.html">Link</a> | <a href="lesson04.html">Link</a></li>
     </ul>
   </nav>
