--- a/forecasted-index.html
+++ b/forecasted-index.html
@@ -4,19 +4,19 @@
   <meta charset="UTF-8">
   <title>Heather Schmidtlein WDD 230 Assignment Portal</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Design Principles for Heather Schmidtlein in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+  <meta name="description" content="Forecasted for Heather Schmidtlein in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="heatherrosea.github.io/normalize.css">
-  <link rel="stylesheet" type="text/css" href="forecasted-small.css">
-  <link rel="stylesheet" type="text/css" href="forecasted-medium.css">
-  <link rel="stylesheet" type="text/css" href="forecasted-large.css">                                       
+  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/forecasted-small.css">
+  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/forecasted-medium.css">
+  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/forecasted-large.css">                                       
 </head>
   
 <body>
   <header>    
     
-    <img id="logo" alt="Forecasted logo" src="">
+    <img id="logo" alt="Forecasted logo" src="/heatherrosea.github.io/glitch-logo.png">
     <nav>
             <a href="forecasted-index.html">Home</a>
             <a href="target-audience.html">Audience</a>
@@ -39,7 +39,7 @@
     
     <section id="section-3">
         <h3>OUR LOGO</h3>
-        <img src="https://cdn.glitch.com/b753ac26-8568-4b97-806e-2968b8866a27%2Fglitch-logo.png?v=1601703096624">
+        <img src="/heatherrosea.github.io/for-glitch.png">
         <p>The Forecasted logo features a thermometer with a sun as the base. Our simple visuals align with our simple weather philosophy. </p>
   </section>
 
