--- a/forecasted-index.html
+++ b/forecasted-index.html
@@ -16,7 +16,7 @@
 <body>
   <header>    
     
-    <img id="logo" alt="Forecasted logo" src="/heatherrosea.github.io/glitch-logo.png">
+    <img id="logo" alt="Forecasted logo" src="/heatherrosea.github.io/for-glitch.png">
     <nav>
             <a href="forecasted-index.html">Home</a>
             <a href="target-audience.html">Audience</a>
@@ -39,7 +39,7 @@
     
     <section id="section-3">
         <h3>OUR LOGO</h3>
-        <img src="/heatherrosea.github.io/for-glitch.png">
+        <img src="/heatherrosea.github.io/glitch-logo.png">
         <p>The Forecasted logo features a thermometer with a sun as the base. Our simple visuals align with our simple weather philosophy. </p>
   </section>
 
