--- a/forecasted-index.html
+++ b/forecasted-index.html
@@ -18,10 +18,10 @@
     
     <img id="logo" alt="Forecasted logo" src="/heatherrosea.github.io/for-glitch.png">
     <nav>
-            <a href="forecasted-index.html">Home</a>
-            <a href="target-audience.html">Audience</a>
-            <a href="color-scheme.html">Colors</a>
-            <a href="typography.html">Typography</a>
+            <a href="/heatherrosea.github.io/forecasted-index.html">Home</a>
+            <a href="/heatherrosea.github.io/target-audience.html">Audience</a>
+            <a href="/heatherrosea.github.io/color-scheme.html">Colors</a>
+            <a href="/heatherrosea.github.io/typography.html">Typography</a>
     </nav>
   </header>
   
