--- a/target-audience.html
+++ b/target-audience.html
@@ -7,21 +7,21 @@
   <meta name="description" content="Design Principles for Heather Schmidtlein in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="heatherrosea.github.io/normalize.css">
-  <link rel="stylesheet" type="text/css" href="forecastedsmall.css">
-  <link rel="stylesheet" type="text/css" href="forecastedmedium.css">
-  <link rel="stylesheet" type="text/css" href="forecastedlarge.css">                                       
+  <link rel="stylesheet" href="/heatherrosea.github.io/normalize.css">
+  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/forecastedsmall.css">
+  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/forecastedmedium.css">
+  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/forecastedlarge.css">                                       
 </head>
   
 <body>
   <header>    
     
-    <img id="logo" alt="Forecasted logo" src="https://cdn.glitch.com/b753ac26-8568-4b97-806e-2968b8866a27%2Ffor-glitch.png?v=1601689747277">
+    <img id="logo" alt="Forecasted logo" src="/heatherrosea.github.io/for-glitch.png">
     <nav>
-            <a href="forecastedindex.html">Home</a>
-            <a href="target-audience.html">Audience</a>
-            <a href="color-scheme.html">Colors</a>
-            <a href="typography.html">Typography</a>
+            <a href="/heatherrosea.github.io/forecastedindex.html">Home</a>
+            <a href="/heatherrosea.github.io/target-audience.html">Audience</a>
+            <a href="/heatherrosea.github.io/color-scheme.html">Colors</a>
+            <a href="/heatherrosea.github.io/typography.html">Typography</a>
     </nav>
   </header>
   
@@ -56,7 +56,7 @@
   
   <footer> &copy;<span id="year"></span> | Heather R. R. Schmidtlein | South Dakota | <a href="https://www.byui.edu/">BYU-I Online Learning</a> 
   <br> Last Update: <span id="date"></span></footer> 
- <script type="text/javascript" src="script.js"></script>
+ <script type="text/javascript" src="/heatherrosea.github.io/script.js"></script>
 
 </body>
 </html>  
