--- a/target-audience.html
+++ b/target-audience.html
@@ -8,9 +8,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/heatherrosea.github.io/normalize.css">
-  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/forecastedsmall.css">
-  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/forecastedmedium.css">
-  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/forecastedlarge.css">                                       
+  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/forecasted-small.css">
+  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/forecasted-medium.css">
+  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/forecasted-large.css">                                       
 </head>
   
 <body>
@@ -18,7 +18,7 @@
     
     <img id="logo" alt="Forecasted logo" src="/heatherrosea.github.io/for-glitch.png">
     <nav>
-            <a href="/heatherrosea.github.io/forecastedindex.html">Home</a>
+            <a href="/heatherrosea.github.io/forecasted-index.html">Home</a>
             <a href="/heatherrosea.github.io/target-audience.html">Audience</a>
             <a href="/heatherrosea.github.io/color-scheme.html">Colors</a>
             <a href="/heatherrosea.github.io/typography.html">Typography</a>
