--- a/target-audience.html
+++ b/target-audience.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
-  <title>Heather Schmidtlein WDD 230 Assignment Portal</title>
+  <title>Forecasted Target Audience</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Design Principles for Heather Schmidtlein in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
