--- a/target-audience.html
+++ b/target-audience.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Design Principles for Heather Schmidtlein in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/heatherrosea.github.io/normalize.css">
+  <link rel="stylesheet" href="heatherrosea.github.io/normalize.css">
   <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/forecasted-small.css">
   <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/forecasted-medium.css">
   <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/forecasted-large.css">                                       
