--- a/target-audience.html
+++ b/target-audience.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Design Principles for Heather Schmidtlein in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="heatherrosea.github.io/normalize.css">
+  <link rel="stylesheet" href="/heatherrosea.github.io/normalize.css">
   <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/forecasted-small.css">
   <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/forecasted-medium.css">
   <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/forecasted-large.css">                                       
@@ -47,9 +47,9 @@
       <p>Julie needs to know if the weather is suitable for an outdoor photograph session. Unexpected bad weather is not an option as it would ruin her shoot.
       <br><br><strong>Solution:</strong> We keep our forecast information updated constantly so there aren't any second guesses.
       <br><br>Julie is a cautious first-time mom and worries about her child in the winter. She needs to know how cold it will get so she can dress her baby appropriately.
-      <strong>Solution:</strong> We provide information along with temperature, such as wind chill and estimated snowfall.
+      <br><br><strong>Solution:</strong> We provide information along with temperature, such as wind chill and estimated snowfall.
       <br><br>Julie often visits family in neighboring cities and wants to easily access between cities.
-      <strong>Solution:</strong> We allow users to favorite certain cities or areas and group cities by areas.</p>   
+      <br><br><strong>Solution:</strong> We allow users to favorite certain cities or areas and group cities by areas.</p>   
     </section>  
 
     </main>
