--- a/forecasted-index.html
+++ b/forecasted-index.html
@@ -47,7 +47,7 @@
   
   <footer> &copy;<span id="year"></span> | Heather R. R. Schmidtlein | South Dakota | <a href="https://www.byui.edu/">BYU-I Online Learning</a> 
   <br> Last Update: <span id="date"></span></footer> 
- <script type="text/javascript" src="/heatherrosea.github.io/script.js"></script>
+ <script type="text/javascript" src="/heatherrosea.github.io/lastupdated.js"></script>
 
 </body>
 </html>  
