--- a/typography.html
+++ b/typography.html
@@ -16,7 +16,7 @@
 <body>
   <header>    
     
-    <img id="logo" alt="/heatherrosea.github.io/for-glitch.png">
+    <img id="logo" alt="Forecasted logo" src="/heatherrosea.github.io/for-glitch.png">
     <nav>
             <a href="/heatherrosea.github.io/forecastedindex.html">Home</a>
             <a href="/heatherrosea.github.io/target-audience.html">Audience</a>
