--- a/typography.html
+++ b/typography.html
@@ -27,9 +27,15 @@
   
   <main>
     
-    <section id="section-1"> 
+    <section id="typography-section"> 
     <h3>TYPOGRAPHY</h3>
-        <p></p>
+    <hr>
+        <h1>HEADING 1</h1>
+        <h2>HEADING 2</h2>
+        <h3>HEADING 3</h3>
+        <p>Body Text</p>
+          
+
     </section>  
 
     </main>
