--- a/preston5.html
+++ b/preston5.html
@@ -8,9 +8,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="heatherrosea.github.io/normalize.css">
-  <link rel="stylesheet" type="text/css" href="prestonsmall.css">
-  <link rel="stylesheet" type="text/css" href="forecastedmedium.css">
-  <link rel="stylesheet" type="text/css" href="forecastedlarge.css">      
+  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/prestonsmall.css">
+  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/forecastedmedium.css">
+  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/forecastedlarge.css">      
   <link rel="shortcut icon" href="https://cdn.glitch.com/b753ac26-8568-4b97-806e-2968b8866a27%2Ffavicon%20(3).ico?v=1602967366914">
 </head>
   
@@ -122,7 +122,7 @@
   
   <footer> &copy; <span id="year"></span> | Forecasted | Attributions | Heather Schmidtlein
   <br><span id="date"></span></footer> 
- <script type="text/javascript" src="script.js"></script>
+ <script type="text/javascript" src="/heatherrosea.github.io/lastupdated.js"></script>
 
 </body>
 </html>  
