--- a/lazyload.html
+++ b/lazyload.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>LazyLoad Week 7 Activity</title>
-    <link rel="stylesheet" href="/lazyload.css">
-    <script src="/lazyload.js" defer></script>
+    <link rel="stylesheet" href="/heatherrosea.github.io/lazyload.css">
+    <script src="/heatherrosea.github.io/lazyload.js" defer></script>
   </head>  
   
   <body>
@@ -13,11 +13,12 @@
       
       <h1>Progressive Loading Images</h1>
       
-      <picture> <img src="http://placekitten.com/300/400" data-src="http://placekitten.com/300/400" alt="kitten"> </picture>
-      <picture> <img src="http://placekitten.com/300/400" alt="kitten"> </picture>
-      <picture> <img src="http://placekitten.com/300/400" alt="kitten"> </picture>
-      <picture> <img src="http://placekitten.com/300/400" alt="kitten"> </picture>
-      <picture> <img src="http://placekitten.com/300/400" alt="kitten"> </picture>
+      <picture> <img src="/heatherrosea.github.io/flamingo.jpg" data-src="/heatherrosea.github.io/flamingo.jpg" alt="flamingo"> </picture>
+      <picture> <img src="/heatherrosea.github.io/fox.jpg" data-src="/heatherrosea.github.io/fox.jpg" alt="flamingo"> </picture>
+      <picture> <img src="/heatherrosea.github.io/frog.jpg" data-src="/heatherrosea.github.io/frog.jpg" alt="flamingo"> </picture>
+      <picture> <img src="/heatherrosea.github.io/bunny.jpg" data-src="/heatherrosea.github.io/bunny.jpg" alt="flamingo"> </picture>
+      <picture> <img src="/heatherrosea.github.io/mtnlion.jpg" data-src="/heatherrosea.github.io/mtnlion.jpg" alt="flamingo"> </picture>
+
   
     </main>
   </body>
