--- a/lazyload.html
+++ b/lazyload.html
@@ -13,7 +13,7 @@
       
       <h1>Progressive Loading Images</h1>
       
-      <picture> <img src="/heatherrosea.github.io/flamingo.jpg" data-src="/heatherrosea.github.io/flamingo.jpg" alt="flamingo"> </picture>
+      <picture> <img src="/heatherrosea.github.io/placeholder300400.jpg" data-src="/heatherrosea.github.io/flamingo.jpg" alt="flamingo"> </picture>
       <picture> <img src="/heatherrosea.github.io/fox.jpg" data-src="/heatherrosea.github.io/fox.jpg" alt="flamingo"> </picture>
       <picture> <img src="/heatherrosea.github.io/frog.jpg" data-src="/heatherrosea.github.io/frog.jpg" alt="flamingo"> </picture>
       <picture> <img src="/heatherrosea.github.io/bunny.jpg" data-src="/heatherrosea.github.io/bunny.jpg" alt="flamingo"> </picture>
