--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1>Heather Schmidtlein</h1>
   </header>
 
- <img src="/heatherrosea.github.io/hll-min.jpg" alt="Photo of Heather Schmidtlein">
+ <img src="/heatherrosea.github.io/hll-optimized.jpg" alt="Photo of Heather Schmidtlein">
 <div id="content">
   <h2>WDD 230: Assignment Portal</h2>
   <hr>
