--- a/preston4.html
+++ b/preston4.html
@@ -13,16 +13,17 @@
   <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/preston-css-large.css">                                       
 </head>
   
+  
 <body>
   <header>    
-    <img id="logo" alt="Forecasted logo" src="/heatherrosea.github.io/croppedlogo.png">
+    <img id="logo" alt="Forecasted logo" src="https://cdn.glitch.com/b753ac26-8568-4b97-806e-2968b8866a27%2Fcropped%20logo%20.png?v=1602298165717">
     <p id="catchphrase">Breaking the weather down so you don't have to.</p>
     
     <nav class="navigation">
       <ul>
-        <li><a class="menu" href="">&#9776; Menu</a></li>
-        <li><a href="/heatherrosea.github.io/preston4.html">Home</a></li>
-        <li><a href="">Preston</a></li>
+        <li><a class="menu" href="#">&#9776; Menu</a></li>
+        <li><a href="">Home</a></li>
+        <li class="active"><a href="">Preston</a></li>
         <li><a href="">Soda Springs</a></li>
         <li><a href="">Fish Haven</a></li>
         <li><a href="">Storm Center</a></li>
