--- a/preston5.html
+++ b/preston5.html
@@ -118,7 +118,7 @@
   
   <footer> &copy; <span id="year"></span> | Forecasted | Attributions | Heather Schmidtlein
   <br><span id="date"></span></footer> 
- <script type="text/javascript" src="script.js"></script>
+ <script type="text/javascript" src="/heatherrosea.github.io/preston-js.js"></script>
 
 </body>
 </html>  
