--- a/preston6.html
+++ b/preston6.html
@@ -45,14 +45,20 @@
     <section class="weather-summary">
      <h3>PRESTON, IDAHO</h3>
        <div class="herodiv">
-          <img id="hero-img" src="https://cdn.glitch.com/b753ac26-8568-4b97-806e-2968b8866a27%2Fhero.webp?v=1603134009746">
-      <section class="stats">
+             <picture class= "hero-img"> 
+            <source srcset="https://cdn.glitch.com/4223a3ac-4a1b-4e3c-9ac5-9f2dcdc3ec7b%2FSmall%20Hero%20Final.jpeg?v=1613855208175" media="(max-width: 600px)">
+            <source srcset="https://cdn.glitch.com/4223a3ac-4a1b-4e3c-9ac5-9f2dcdc3ec7b%2FMedium%20Hero%20Final.jpeg?v=1613855205509" media="(max-width: 700px)">
+            <source srcset="https://cdn.glitch.com/4223a3ac-4a1b-4e3c-9ac5-9f2dcdc3ec7b%2FLarge%20Hero%20Final.jpeg?v=1613855210719" media="(min-width: 900px)">
+            <img src="https://cdn.glitch.com/4223a3ac-4a1b-4e3c-9ac5-9f2dcdc3ec7b%2FImg%20Src.jpg?v=1613855937068" alt="sunny mountain day">
+         </picture>
+ <section class="stats">
        <h3 id="ws-h1">WEATHER SUMMARY</h3>
          <p>Currently: <span id="currently">Cloudy</span>
          <br>Temperature: <span id="temperature">53F</span>
          <br>Humidity: <span id="humidity">76%</span>
          <br>Precipitation: <span id="precipitation">82%</span>
-         <br>Wind Speed: <span id="wind-speed">15 MPH</span></p>
+         <br>Wind Speed: <span id="wind-speed">15 MPH</span>
+         <br>Wind Chill: <span id="wind-chill"></span></p>
       </section>
       </div>
     </section>
@@ -119,6 +125,9 @@
   <footer> &copy; <span id="year"></span> | Forecasted | Attributions | Heather Schmidtlein
   <br><span id="date"></span></footer> 
  <script type="text/javascript" src="/heatherrosea.github.io/preston-js.js"></script>
+ <script type="text/javascript" src="/heatherrosea.github.io/windchill.js"></script>
+ <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+
 
 </body>
 </html>  
