--- a/tablebuild.html
+++ b/tablebuild.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="heatherrosea.github.io/normalize.css">
-  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/tablebuild.css">  
+  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/table-build.css">  
   <link rel="shortcut icon" href="https://cdn.glitch.com/b753ac26-8568-4b97-806e-2968b8866a27%2Ffavicon%20(3).ico?v=1602967366914">
 </head>
   
@@ -92,7 +92,7 @@ W08 ACTIVITY
   <footer> &copy; <span id="year"></span> | Forecasted | Attributions | Heather Schmidtlein
   <br><span id="date"></span></footer> 
  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
- <script type="text/javascript" src="/heatherrosea.github.io/preston.js"></script>
+ <script type="text/javascript" src="/heatherrosea.github.io/preston-js.js"></script>
   <script type="text/javascript" src="/heatherrosea.github.io/windchill.js"></script>
 
 
