--- a/tablebuild.html
+++ b/tablebuild.html
@@ -36,7 +36,7 @@ W08 ACTIVITY
                 <table>
                   <thead>
                       <tr>
-                        <th colspan="3"> <b>ACME Wildwest </b></th>
+                        <th colspan="3"> ACME Wildwest</th>
                       </tr>
                   </thead>
                   <tbody>
