--- a/prophets.html
+++ b/prophets.html
@@ -5,7 +5,9 @@
   <title>Latter Day Prophets JSON Assingment</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Latter Day Prophets JSON Assingment in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
-
+  
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="heatherrosea.github.io/normalize.css">
   <link rel="stylesheet" type="text/css" href="prophets.css">
   
@@ -16,12 +18,16 @@
 <header>
   <h1>Latter-day Prophets</h1>
 </header>
+  
 <main>
   <div class="cards"></div>
 </main>
+  
 <footer>
   Heather Schmidtlein | BYU-Idaho | WDD 230
 </footer>
+  
+<script src="prophets.js"></script>
 
 </body>
 </html>  
