--- a/prophets.html
+++ b/prophets.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="heatherrosea.github.io/normalize.css">
-  <link rel="stylesheet" type="text/css" href="prophets.css">
+  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/prophets.css">
   
 </head>
   
@@ -27,7 +27,7 @@
   Heather Schmidtlein | BYU-Idaho | WDD 230
 </footer>
   
-<script src="prophets.js"></script>
+<script src="/heatherrosea.github.io/prophets.js"></script>
 
 </body>
 </html>  
