--- a/homepage.html
+++ b/homepage.html
@@ -83,7 +83,7 @@
   <footer> &copy; <span id="year"></span> | Forecasted | Attributions | Heather Schmidtlein
   <br><span id="date"></span></footer> 
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
- <script type="text/javascript" src="/heatherrosea.github.io/script.js"></script>
+ <script type="text/javascript" src="/heatherrosea.github.io/preston.js"></script>
   <script type="text/javascript" src="/heatherrosea.github.io/windchill.js"></script>
     <script type="text/javascript" src="/heatherrosea.github.io/lazyload.js"></script>
     <script type="text/javascript" src="/heatherrosea.github.io/homepage.js"></script>
