--- a/preston-10.html
+++ b/preston-10.html
@@ -8,9 +8,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="heatherrosea.github.io/normalize.css">
-  <link rel="stylesheet" type="text/css" href="forecastedsmall.css">
-  <link rel="stylesheet" type="text/css" href="forecastedmedium.css">
-  <link rel="stylesheet" type="text/css" href="forecastedlarge.css">      
+  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/preston-css-small.css">
+  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/preston-css-medium.css">
+  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/preston-css-large.css">   
   <link rel="shortcut icon" href="https://cdn.glitch.com/b753ac26-8568-4b97-806e-2968b8866a27%2Ffavicon%20(3).ico?v=1602967366914">
 </head>
   
@@ -119,11 +119,11 @@
   
   <footer> &copy; <span id="year"></span> | Forecasted | Attributions | Heather Schmidtlein
   <br><span id="date"></span></footer> 
- <script type="text/javascript" src="script.js"></script>
+ <script type="text/javascript" src="/heatherrosea.github.io/preston-js.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-  <script type="text/javascript" src="windchill.js"></script>
-  <script type="text/javascript" src="lazyload.js"></script>
-  <script type="text/javascript" src="weatherapi.js"></script>
+  <script type="text/javascript" src="/heatherrosea.github.io/windchill.js"></script>
+  <script type="text/javascript" src="/heatherrosea.github.io/lazyload.js"></script>
+  <script type="text/javascript" src="/heatherrosea.github.io/weatherapi.js"></script>
 
 </body>
 </html>  
