--- a/preston-10.html
+++ b/preston-10.html
@@ -70,11 +70,11 @@
                     <th><span id="dayofweek5"></span></th>
                 </tr>
                 <tr>
-                    <td><img src="https://cdn.glitch.com/b753ac26-8568-4b97-806e-2968b8866a27%2Ficonfinder_Cloudy_Sunny_5729392.png?v=1603149102939" alt="Cloudy Icon"></td>
-                    <td><img src="https://cdn.glitch.com/b753ac26-8568-4b97-806e-2968b8866a27%2Ficonfinder_Cloudy_Sunny_5729392.png?v=1603149102939" alt="Cloudy Icon"></td>
-                    <td><img src="https://cdn.glitch.com/b753ac26-8568-4b97-806e-2968b8866a27%2Ficonfinder_Cloudy_Sunny_5729392.png?v=1603149102939" alt="Cloudy Icon"></td>
-                    <td><img src="https://cdn.glitch.com/b753ac26-8568-4b97-806e-2968b8866a27%2Ficonfinder_Cloudy_Sunny_5729392.png?v=1603149102939" alt="Cloudy Icon"></td>
-                    <td><img src="https://cdn.glitch.com/b753ac26-8568-4b97-806e-2968b8866a27%2Ficonfinder_Cloudy_Sunny_5729392.png?v=1603149102939" alt="Cloudy Icon"></td>
+                    <td><span><img src="#" alt="" id="icon1"></span></td>
+                    <td><span><img src="#" alt="" id="icon1"></span></td>
+                    <td><span><img src="#" alt="" id="icon1"></span></td>
+                    <td><span><img src="#" alt="" id="icon1"></span></td>
+                    <td><span><img src="#" alt="" id="icon1"></span></td>
                 </tr>
                 <tr>
                     <td><span id="forecast1"></span>°F</td>
