--- a/preston-10.html
+++ b/preston-10.html
@@ -68,20 +68,13 @@
                     <th><span id="dayofweek3"></span></th>
                     <th><span id="dayofweek4"></span></th>
                     <th><span id="dayofweek5"></span></th>
-                </tr>
+                </tr>                    
                 <tr>
-                    <td><span><img src="#" alt="" id="icon1"></span></td>
-                    <td><span><img src="#" alt="" id="icon2"></span></td>
-                    <td><span><img src="#" alt="" id="icon3"></span></td>
-                    <td><span><img src="#" alt="" id="icon4"></span></td>
-                    <td><span><img src="#" alt="" id="icon5"></span></td>
-                </tr>
-                <tr>
-                    <td><span id="forecast1"></span>°F</td>
-                    <td><span id="forecast2"></span>°F</td>
-                    <td><span id="forecast3"></span>°F</td>
-                    <td><span id="forecast4"></span>°F</td>
-                    <td><span id="forecast5"></span>°F</td>
+                    <td><span><img src="#" alt="" id="icon1"></span><span id="forecast1"></span>°F</td>
+                    <td><span><img src="#" alt="" id="icon2"></span><span id="forecast2"></span>°F</td>
+                    <td><span><img src="#" alt="" id="icon3"></span><span id="forecast3"></span>°F</td>
+                    <td><span><img src="#" alt="" id="icon4"></span><span id="forecast4"></span>°F</td>
+                    <td><span><img src="#" alt="" id="icon5"></span><span id="forecast5"></span>°F</td>
                 </tr>
             </table>
         </div>
