--- a/preston-10.html
+++ b/preston-10.html
@@ -53,7 +53,7 @@
          <br>Temperature: <span id="temperature"></span>&deg; F
          <br>Humidity: <span id="humidity"></span>%
          <br>Wind Speed: <span id="wind-speed"></span> MPH
-        <br>Wind Chill: <span id="wind-chill"></span></p>
+        <br>Wind Chill: <span id="wind-chill"></span> MPH</p>
       </section>
       </div>
     </section>
