--- a/weathersite/preston.html
+++ b/weathersite/preston.html
@@ -8,9 +8,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="heatherrosea.github.io/normalize.css">
-  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/preston-css-small.css">
-  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/preston-css-medium.css">
-  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/preston-css-large.css">   
+  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/weathersite/preston-css-small.css">
+  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/weathersite/preston-css-medium.css">
+  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/weathersite/preston-css-large.css">   
   <link rel="shortcut icon" href="https://cdn.glitch.com/b753ac26-8568-4b97-806e-2968b8866a27%2Ffavicon%20(3).ico?v=1602967366914">
 </head>
   
