--- a/weathersite/index.html
+++ b/weathersite/index.html
@@ -29,8 +29,8 @@
     <nav class="navigation">
       <ul>
         <li><a class="menu" href="#">&#9776; Menu</a></li>
-        <li><a href="/heatherrosea.github.io/weathersite/index.html">Home</a></li>
-        <li class="active"><a href="/heatherrosea.github.io/weathersite/preston.html">Preston</a></li>
+        <li class="active"><a href="/heatherrosea.github.io/weathersite/index.html">Home</a></li>
+        <li><a href="/heatherrosea.github.io/weathersite/preston.html">Preston</a></li>
         <li><a href="/heatherrosea.github.io/weathersite/sodasprings.html">Soda Springs</a></li>
         <li><a href="/heatherrosea.github.io/weathersite/fishhaven.html">Fish Haven</a></li>
         <li><a href="/heatherrosea.github.io/weathersite/stormcenter.html">Storm Center</a></li>
