--- a/weathersite/index.html
+++ b/weathersite/index.html
@@ -44,7 +44,7 @@
     
     <section class="weather-summary">
        <div class="herodiv">
-          <img id="hero-img" src="https://cdn.glitch.com/677ff128-efa4-46b5-9579-d432d34d8523%2Fhomehero.jpg?v=1615422636033">
+          <img id="hero-img" src="https://cdn.glitch.com/677ff128-efa4-46b5-9579-d432d34d8523%2Fhomehero.jpg?v=1615422636033" alt="town mountain landscape">
       </div>
     </section>
     
