--- a/weathersite/index.html
+++ b/weathersite/index.html
@@ -57,7 +57,7 @@
       <br><br><b>Learn More</b></p>
       </div>
         <div id="article-img">
-              <img id="preston-snow" src="https://cdn.glitch.com/677ff128-efa4-46b5-9579-d432d34d8523%2Fpicnic.jpg?v=1615423660313">
+              <img id="preston-snow" src="https://cdn.glitch.com/677ff128-efa4-46b5-9579-d432d34d8523%2Fpicnic.jpg?v=1615423660313" alt="picnic in park">
               </div>
   </section>
     
@@ -82,11 +82,11 @@
   
   <footer> &copy; <span id="year"></span> | Forecasted | Attributions | Heather Schmidtlein
   <br><span id="date"></span></footer> 
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
- <script type="text/javascript" src="/heatherrosea.github.io/preston-js.js"></script>
-  <script type="text/javascript" src="/heatherrosea.github.io/windchill.js"></script>
-    <script type="text/javascript" src="/heatherrosea.github.io/lazyload.js"></script>
-    <script type="text/javascript" src="/heatherrosea.github.io/homepage.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+  <script src="/heatherrosea.github.io/preston-js.js"></script>
+  <script src="/heatherrosea.github.io/windchill.js"></script>
+  <script src="/heatherrosea.github.io/lazyload.js"></script>
+  <script src="/heatherrosea.github.io/homepage.js"></script>
 
 
 </body>
