--- a/weathersite/index.html
+++ b/weathersite/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Weather Site Homepage for Heather Schmidtlein in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="heatherrosea.github.io/normalize.css">
+  <link rel="stylesheet" href="heatherrosea.github.io/weathersite/normalize.css">
   <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/weathersite/index-css-small.css">
   <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/weathersite/index-css-medium.css">
   <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/weathersite/index-css-large.css">       
@@ -86,7 +86,7 @@
   <script src="/heatherrosea.github.io/preston-js.js"></script>
   <script src="/heatherrosea.github.io/windchill.js"></script>
   <script src="/heatherrosea.github.io/lazyload.js"></script>
-  <script src="/heatherrosea.github.io/homepage.js"></script>
+  <script src="/heatherrosea.github.io/weathersite/homepage.js"></script>
 
 
 </body>
