--- a/weathersite/index.html
+++ b/weathersite/index.html
@@ -86,7 +86,7 @@
   <script src="/heatherrosea.github.io/preston-js.js"></script>
   <script src="/heatherrosea.github.io/windchill.js"></script>
   <script src="/heatherrosea.github.io/lazyload.js"></script>
-  <script src="/heatherrosea.github.io/weathersite/homepage.js"></script>
+  <script src="/heatherrosea.github.io/weathersite/index.js"></script>
 
 
 </body>
