--- a/weathersite/index.html
+++ b/weathersite/index.html
@@ -83,9 +83,7 @@
   <footer> &copy; <span id="year"></span> | Forecasted | Attributions | Heather Schmidtlein
   <br><span id="date"></span></footer> 
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-  <script src="/heatherrosea.github.io/preston-js.js"></script>
-  <script src="/heatherrosea.github.io/windchill.js"></script>
-  <script src="/heatherrosea.github.io/lazyload.js"></script>
+  <script src="/heatherrosea.github.io/weathersite/index.js"></script>
   <script src="/heatherrosea.github.io/weathersite/index.js"></script>
 
 
