--- a/weathersite/preston.html
+++ b/weathersite/preston.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Preston Site for Heather Schmidtlein in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="heatherrosea.github.io/normalize.css">
+  <link rel="stylesheet" href="heatherrosea.github.io/weathersite/normalize.css">
   <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/weathersite/preston-css-small.css">
   <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/weathersite/preston-css-medium.css">
   <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/weathersite/preston-css-large.css">   
@@ -115,11 +115,9 @@
   
   <footer> &copy; <span id="year"></span> | Forecasted | Attributions | Heather Schmidtlein
   <br><span id="date"></span></footer> 
- <script type="text/javascript" src="/heatherrosea.github.io/preston-js.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-  <script type="text/javascript" src="/heatherrosea.github.io/windchill.js"></script>
-  <script type="text/javascript" src="/heatherrosea.github.io/lazyload.js"></script>
-  <script type="text/javascript" src="/heatherrosea.github.io/weatherapi.js"></script>
+  <script src="/heatherrosea.github.io/weathersite/index.js"></script>
+  <script src="/heatherrosea.github.io/weathersite/weatherapi.js"></script>
 
 </body>
 </html>  
