--- a/weathersite/preston.html
+++ b/weathersite/preston.html
@@ -84,13 +84,13 @@
     </section>
     
     <section id="article">
-        <h3>UPCOMING EVENT: ST. PATTY'S DAY PICNIC IN THE PARK</h3>
+        <h3>PRESTON GETS FIRST SNOWFALL OF THE SEASON</h3>
       <div id="article-body">    
-      <p>Join us for the annually held St. Patty's Day Picnic at Nature Park, featuring traditional Irish food, song, and dance. Tickets are $10 per person and include one meal and one entry into the Luck of the Irish Raffle. Prizes include gift baskets, cash, and gift cards to local restaurants and businesses. Proceeds from this event support the local Wildlife Foundation so come out and show your support!
-      <br><br><b>Learn More</b></p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean tincidunt nec mi eget faucibus. Curabitur non enim eleifend, iaculis orci quis, commodo velit. Phasellus tempor auctor hendrerit. Cras facilisis consectetur libero nec pretium. Aliquam erat volutpat. Suspendisse porttitor ornare venenatis. Ex magna ut minim veniam nostrud consectetur in officia tempor ad nulla deserunt. Occaecat laborum esse minim cillum veniam ut sint. Ex laboris minim duis duis deserunt irure. Duis est ut officia veniam nisi esse ipsum est laborum fugiat ullamco esse amet. Culpa est elit ullamco est reprehenderit Lorem aliqua id sunt proident ut. Esse eu est elit occaecat excepteur Lorem.
+          <br><br>Ex laboris minim duis duis deserunt irure. Duis est ut officia veniam nisi esse ipsum est laborum fugiat ullamco esse amet. Culpa est elit ullamco est reprehenderit Lorem aliqua id sunt proident ut. Esse eu est elit occaecat excepteur Lorem.<br><br><b>Continue Reading</b></p>
       </div>
         <div id="article-img">
-              <img id="preston-snow" src="https://cdn.glitch.com/677ff128-efa4-46b5-9579-d432d34d8523%2Fpicnic.jpg?v=1615423660313">
+              <img id="preston-snow" src="https://cdn.glitch.com/b753ac26-8568-4b97-806e-2968b8866a27%2Fphoto-1454682389999-8b892d7d04c7.webp?v=1603172360329" alt="log houses in snow">
               </div>
   </section>
     
