--- a/weathersite/preston.html
+++ b/weathersite/preston.html
@@ -49,7 +49,7 @@
     
     <section class="weather-summary">
        <div class="herodiv">
-          <img id="hero-img" src="https://cdn.glitch.com/b753ac26-8568-4b97-806e-2968b8866a27%2Fhero.webp?v=1603134009746">
+          <img id="hero-img" src="https://cdn.glitch.com/b753ac26-8568-4b97-806e-2968b8866a27%2Fhero.webp?v=1603134009746" alt="road in the fall">
       <section class="stats">
        <h3 id="ws-h1">WEATHER SUMMARY</h3>
          <p>Currently: <span id="currently"></span>
