--- a/weathersite/preston.html
+++ b/weathersite/preston.html
@@ -101,9 +101,9 @@
             <br>forecasted@forecastedweather.com
             <br>208-123-456<br>
              <br>Find us on social media!<br>
-      <a href="#" class="fa fa-facebook"></a>
-      <a href="#" class="fa fa-twitter"></a>
-      <a href="#" class="fa fa-google"></a></p>
+      <a href="#" class="fa fa-facebook" alt="facebook icon"></a>
+      <a href="#" class="fa fa-twitter" alt="twitter icon"></a>
+      <a href="#" class="fa fa-google" alt="google icon"></a></p>
       </div>
          <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47365.773853438026!2d-111.91534443111685!3d42.09974162639047!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8754f78c7cda6c31%3A0xf1b3b4fc465a4a3f!2sPreston%2C%20ID%2083263!5e0!3m2!1sen!2sus!4v1603172620341!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
           <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
