--- a/weathersite/stormcenter.html
+++ b/weathersite/stormcenter.html
@@ -30,10 +30,10 @@
       <ul>
         <li><a class="menu" href="#">&#9776; Menu</a></li>
         <li><a href="">Home</a></li>
-        <li class="active"><a href="">Preston</a></li>
+        <li><a href="">Preston</a></li>
         <li><a href="">Soda Springs</a></li>
         <li><a href="">Fish Haven</a></li>
-        <li><a href="">Storm Center</a></li>
+        <li class="active"><a href="">Storm Center</a></li>
         <li><a href="">Gallery</a></li>
       </ul>
     </nav>
