--- a/weathersite/stormcenter.html
+++ b/weathersite/stormcenter.html
@@ -29,12 +29,12 @@
     <nav class="navigation">
       <ul>
         <li><a class="menu" href="#">&#9776; Menu</a></li>
-        <li><a href="">Home</a></li>
-        <li><a href="">Preston</a></li>
-        <li><a href="">Soda Springs</a></li>
-        <li><a href="">Fish Haven</a></li>
-        <li class="active"><a href="">Storm Center</a></li>
-        <li><a href="">Gallery</a></li>
+        <li><a href="/heatherrosea.github.io/weathersite/index.html">Home</a></li>
+        <li><a href="/heatherrosea.github.io/weathersite/preston.html">Preston</a></li>
+        <li><a href="/heatherrosea.github.io/weathersite/sodasprings.html">Soda Springs</a></li>
+        <li><a href="/heatherrosea.github.io/weathersite/fishhaven.html">Fish Haven</a></li>
+        <li class="active"><a href="/heatherrosea.github.io/weathersite/stormcenter.html">Storm Center</a></li>
+        <li><a href="/heatherrosea.github.io/weathersite/gallery.html">Gallery</a></li>
       </ul>
     </nav>
     
